# htmx-flask

./: app.py  fastapi-app.py  pyproject.toml
templates/: index.html  list_items.html
